[package]
name = "monitoring_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
mongodb = "2.8"
bson = "2"
tokio-serial = "5.4" # Untuk komunikasi serial
actix-web-actors = "4" # Untuk WebSocket
actix = "0.13" # Untuk sistem Actor
# rand = "0.8" # Uncomment ini jika Anda ingin menggunakan simulasi dummy di main.rs